# e_journal_api

./: .env.example  .env.test  Dockerfile  README.md  alembic.ini  pyproject.toml
infra/: docker-compose.dev.yml  docker-compose.test.yml
infra/commands/: api.sh  test_api.sh
src/: main.py
src/api/: __init__.py  dependencies.py  pagination.py
src/api/v1/: __init__.py  scores.py  students.py
src/config/: config.py
src/db/: __init__.py  db.py
src/db/mixins/: pk.py
src/exceptions/: base.py  pagination.py  scores.py  students.py
src/migrations/: env.py
src/models/: scores.py  students.py  utils.py
src/repositories/: scores.py  students.py
src/schemas/: scores.py  students.py
src/schemas/mixins/: scores.py
src/services/: scores.py  students.py
src/tests/: conftest.py  utils.py
src/tests/api_tests/: conftest.py
src/tests/api_tests/v1_tests/: conftest.py
src/tests/api_tests/v1_tests/unit_tests/: conftest.py  tests_scores.py  tests_students.py
src/utils/: repository.py  transaction.py
